--- a/AllTest/Patissarie.html
+++ b/AllTest/Patissarie.html
@@ -17,7 +17,7 @@
    patisserie
   </h1>
   <p>
-   <img alt="pastry" src="/home/bcuser/Pictures/pastry1.jpg" title="Patisserie"/>
+   <img alt="pastry" src="http://achatsmalin.com/img/cms/mini-patisserie.png" title="Patisserie"/>
   </p>
   <blockquote>
    <p>
