--- a/AllTest/Patissarie.html
+++ b/AllTest/Patissarie.html
@@ -13,17 +13,29 @@
   </style>
  </head>
  <body>
-  <h1 id="patisserie">
-   patisserie
-  </h1>
   <p>
-   <img alt="pastry" src="http://achatsmalin.com/img/cms/mini-patisserie.png" title="Patisserie"/>
+   <strong>
+    patisserie
+   </strong>
   </p>
-  <blockquote>
-   <p>
-    A pâtisserie is a type of French or Belgian bakery that specializes in pastries and sweets.
-   </p>
-  </blockquote>
+  <p>
+   <img alt="patisserie" src="http://www.blogto.com/listings/bakery/upload/2014/10/20141002-temperedroom590-05.jpg" title="patisserie"/>
+  </p>
+  <p>
+   A pâtisserie is a type of French or Belgian bakery that specializes in pastries and sweets.
+  </p>
+  <ul>
+   <li>
+    <a href="http://localhost/pudding.html">
+     Pudding
+    </a>
+   </li>
+   <li>
+    <a href="http://localhost/Pain%20Au%20lait.html">
+     pain Au lait
+    </a>
+   </li>
+  </ul>
   <script src="http://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.1/highlight.min.js">
   </script>
   <script>
