--- a/AllTest/pudding.html
+++ b/AllTest/pudding.html
@@ -16,7 +16,7 @@
   <p>
    <strong>
     <em>
-     Egg Pudding
+     Egg Pudding <br/>
     </em>
    </strong>
   </p>
@@ -25,7 +25,7 @@
   </p>
   <p>
    <strong>
-    Ingredients:
+    Ingredients: <br/>
    </strong>
   </p>
   <ul>
@@ -47,7 +47,7 @@
   </ul>
   <p>
    <strong>
-    Method:
+    Method: <br/>
    </strong>
   </p>
   <ul>
